# amodem

./: .gitignore  gg_receive.py  gg_send.py  mypy.ini  pyproject.toml  ruff.toml  test_gg.py  test_gg2.py
amodem/: __main__.py  alsa.py  audio.py  calib.py  config.py  detect.py  equalizer.py  error.py  framing.py  main.py  recv.py  sd.py  send.py
old/: setup.py
scripts/: plot.py  record.py  resample.py
